kubernetes/base/namespaces/blueeco-mojaloop-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blueeco-mojaloop-prod
  labels:
    kubernetes.io/metadata.name: blueeco-mojaloop-prod
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-egress
  namespace: blueeco-mojaloop-prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
